feat: add direct lightning item attacks